--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: ctrw
 Type: Package
 Title: What the Package Does (Title Case)
-Version: 0.1.0
+Version: 0.1.0.9000
 Author: Who wrote it
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: AGPL-3
 Encoding: UTF-8
+URL: https://github.com/ianjonsen/ctrw
+BugReports: https://github.com/ianjonsen/ctrw/issues
 LazyData: true
+RoxygenNote: 6.0.1
