adding essential info

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,11 @@ Package: ctrw
 Type: Package
 Title: What the Package Does (Title Case)
 Version: 0.1.0.9000
-Author: Who wrote it
+Authors@R: c(
+    person("Ian", "Jonsen", email = "ian.jonsen@mq.edu.au", 
+    role = c("aut", "cre")),
+    person("Toby", "Patterson", email = "toby.patterson@csiro.au",
+    role = "ctb")
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
