--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(geosphere,mercator)
