--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,3 +15,8 @@ URL: https://github.com/ianjonsen/ctrw
 BugReports: https://github.com/ianjonsen/ctrw/issues
 LazyData: true
 RoxygenNote: 6.0.1
+Suggests: tidyverse,
+    lubridate
+Imports: TMB (>= 1.7.13)
+LinkingTo: TMB,
+    RcppEigen
