update for multi-track fit fn

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,ctrwSSM)
 S3method(print,ctrwSSM)
 S3method(summary,ctrwSSM)
 export(fit_ssm)
+export(mfit_ssm)
 export(prefilter)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,newtonOption)
@@ -11,10 +12,13 @@ importFrom(TMB,sdreport)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
+importFrom(dplyr,do)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_point)
