--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ S3method(plot,ctrwSSM)
 S3method(print,ctrwSSM)
 S3method(summary,ctrwSSM)
 export(fit_ssm)
-export(mfit_ssm)
 export(prefilter)
+export(sfilter)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,newtonOption)
 importFrom(TMB,sdreport)
