added req'd dplyr fn import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
+importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_qq)
