--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ importFrom(dplyr,lag)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rowwise)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,tbl_df)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
