--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(plot,ctrwSSM)
 S3method(print,ctrwSSM)
 S3method(summary,ctrwSSM)
+export(extract)
 export(fit_ssm)
 export(prefilter)
 export(sfilter)
@@ -24,6 +25,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,tbl_df)
 importFrom(dplyr,ungroup)
+importFrom(geosphere,mercator)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_qq)
