--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,4 +43,5 @@ importFrom(stats,nlminb)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,sd)
+importFrom(tibble,as_tibble)
 useDynLib(ctrw)
