--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,6 @@
 Package: ctrw
 Type: Package
-Title: a Continuous-Time Random Walk state-space model to filter Argos Least 
-Squares or Kalman Filter location data
+Title: a Continuous-Time Random Walk state-space model to filter Argos Least Squares or Kalman Filter location data
 Version: 0.1.0.9631
 Authors@R: c(
     person("Ian", "Jonsen", email = "ian.jonsen@mq.edu.au", 
@@ -9,14 +8,7 @@ Authors@R: c(
     person("Toby", "Patterson", email = "toby.patterson@csiro.au",
     role = "ctb"))
 Maintainer: Ian Jonsen <ian.jonsen@mq.edu.au>
-Description: `ctrw` is an R package that fits a continuous-time random walk 
-model in state-space form to filter Argos satellite location data. Template 
-Model Builder (`TMB`) is used for fast estimation. The Argos data can be 
-either (older) Least Squares-based locations or (newer) Kalman Filter-based 
-locations with error ellipse information. Separate measurement models are used 
-for these two data types. The model estimates two sets of location states: 
-1) corresponding to each observation, which are irregularly timed; and 
-2) corresponding to regular time intervals specified by the user.
+Description: `ctrw` is an R package that fits a continuous-time random walk model in state-space form to filter Argos satellite location data. Template Model Builder (`TMB`) is used for fast estimation. The Argos data can be either (older) Least Squares-based locations or (newer) Kalman Filter-based locations with error ellipse information. Separate measurement models are used for these two data types. The model estimates two sets of location states: 1) corresponding to each observation, which are irregularly timed; and 2) corresponding to regular time intervals specified by the user.
 License: AGPL-3
 Encoding: UTF-8
 URL: https://github.com/ianjonsen/ctrw
