--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_bw)
 importFrom(gridExtra,grid.arrange)
 importFrom(lubridate,ymd_hms)
+importFrom(rgdal,project)
 importFrom(stats,cov)
 importFrom(stats,loess)
 importFrom(stats,loess.control)
