update coordinate projection to use sp/rgdal instead of geosphere::mercator

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,9 @@ importFrom(ggplot2,theme_bw)
 importFrom(gridExtra,grid.arrange)
 importFrom(lubridate,ymd_hms)
 importFrom(rgdal,project)
+importFrom(sp,CRS)
+importFrom(sp,SpatialPoints)
+importFrom(sp,spTransform)
 importFrom(stats,cov)
 importFrom(stats,loess)
 importFrom(stats,loess.control)
