--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(TMB,newtonOption)
 importFrom(TMB,sdreport)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,collect)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
@@ -25,7 +26,6 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,tbl_df)
 importFrom(dplyr,ungroup)
-importFrom(geosphere,mercator)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_qq)
@@ -34,6 +34,9 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_bw)
 importFrom(gridExtra,grid.arrange)
 importFrom(lubridate,ymd_hms)
+importFrom(multidplyr,cluster_library)
+importFrom(multidplyr,create_cluster)
+importFrom(multidplyr,partition)
 importFrom(rgdal,project)
 importFrom(sp,CRS)
 importFrom(sp,SpatialPoints)
