dropped loess for location inits, now use approx/stats::filter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ importFrom(TMB,newtonOption)
 importFrom(TMB,sdreport)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
-importFrom(dplyr,collect)
 importFrom(dplyr,distinct)
 importFrom(dplyr,do)
 importFrom(dplyr,filter)
@@ -34,17 +33,15 @@ importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,theme_bw)
 importFrom(gridExtra,grid.arrange)
 importFrom(lubridate,ymd_hms)
-importFrom(multidplyr,cluster_library)
-importFrom(multidplyr,create_cluster)
-importFrom(multidplyr,partition)
 importFrom(rgdal,project)
 importFrom(sp,CRS)
 importFrom(sp,SpatialPoints)
 importFrom(sp,spTransform)
+importFrom(stats,approx)
 importFrom(stats,cov)
 importFrom(stats,loess)
-importFrom(stats,loess.control)
 importFrom(stats,nlminb)
+importFrom(stats,optim)
 importFrom(stats,pnorm)
 importFrom(stats,predict)
 importFrom(stats,sd)
