--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(extract)
 export(fit_ssm)
 export(prefilter)
 export(sfilter)
+export(wrap_lon)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,newtonOption)
 importFrom(TMB,sdreport)
@@ -34,9 +35,6 @@ importFrom(ggplot2,theme_bw)
 importFrom(gridExtra,grid.arrange)
 importFrom(lubridate,ymd_hms)
 importFrom(rgdal,project)
-importFrom(sp,CRS)
-importFrom(sp,SpatialPoints)
-importFrom(sp,spTransform)
 importFrom(stats,approx)
 importFrom(stats,cov)
 importFrom(stats,loess)
