--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(wrap_lon)
 importFrom(TMB,MakeADFun)
 importFrom(TMB,newtonOption)
 importFrom(TMB,sdreport)
+importFrom(argosfilter,sdafilter)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
 importFrom(dplyr,distinct)
